fixed auto spacing

--- a/static/HappyWoof.css
+++ b/static/HappyWoof.css
@@ -56,6 +56,7 @@ body {
     
     min-width: 0;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .photoInSquare {
